Bug & layout fixes - Now it's actually possible to divide file extensions with a comma - Improved displaying of settings and table on mobile devices - Bumped version to 1.0.3

--- a/src/index.css
+++ b/src/index.css
@@ -216,3 +216,22 @@ a {
   display: block;
   margin-bottom: 10px;
 }
+
+.autoHeight {
+  display: block;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.autoHeight:not(.autoWidth) {
+  max-width: calc(100% - 74px);
+  width: calc(100% - 74px);
+}
+
+.autoHeight>input,
+.autoHeight>select {
+  margin-top: 5px;
+  display: block;
+  width: 100%;
+  width: -webkit-fill-available;
+}
